@@ -11,5 +11,20 @@ EXTRA_DIST = \
 	freeglut_static.dsp \
 	freeglut_evc4.vcp freeglut_evc4.vcw
 
+# Thanks to WinDoze, some files in CVS have the "execute" bit set when they
+# shoudn't. We could fix this if we had direct access to the CVS repository,
+# but we are not that lucky. Instead we fix this at distribution creation time.
+dist-hook:
+	find $(distdir) -type f \( \
+	    -name "*.c" -o \
+	    -name "*.dsp" -o \
+	    -name "*.dsw" -o \
+	    -name "*.h" -o \
+	    -name "*.html" -o \
+	    -name "*.png" -o \
+	    -name "LISEZ_MOI" -o \
+	    -name "README*" \
+	    \) -exec chmod -x {} \;
+
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
